...
    <string name="no_results">No Results :/</string>

    <string name="order">Order</string>
    <string name="filterABC">Alphabetical ABC</string>
    <string name="filterZYX">Alphabetical ZYX</string>
    <string name="filterDefault">None</string>
    <string name="providers">Providers</string>
    <string name="filterCodeCademy">CodeCademy</string>
    <string name="filterCoursera">Coursera</string>
    <string name="filterFutureLearn">FutureLearn</string>
    <string name="filterSkillShare">SkillShare</string>
    <string name="clear_filters">Clear Filters</string>

    <string name="invalid_search">Use your words; null is an invalid search:/</string>
    <string name="close">Close</string>

...
