...
        android:background="@drawable/round_button"
        android:backgroundTint="?attr/colorAccent"
        android:gravity="start"
        android:iconifiedByDefault="false"
        android:queryBackground="@android:color/transparent"
        android:queryHint='Search for...'
        app:layout_constraintEnd_toStartOf="@+id/filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchPageTitle" />

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
...
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchFor" />

    <LinearLayout
        android:id="@+id/Navigation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/nav_bar_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="3dp"
...
            android:background="@drawable/ic_home"
            android:backgroundTint="@color/colorButtonsLightMode"
            android:scaleType="fitCenter"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/searchButton2"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_marginEnd="60dip"
            android:layout_weight="0"
            android:background="@drawable/ic_search_black_24dp"
            android:backgroundTint="@color/colorPrimaryDark"
...
